--- a/index.html
+++ b/index.html
@@ -8,6 +8,69 @@
     <title>landing page project</title>
 </head>
 <body>
-    
+    <section id="sec1">
+        <nav>
+            <b><p>Header logo</p></b>
+            <ul>
+                <li>link 1</li>
+                <li>link 1</li>
+                <li>link 1</li>
+            </ul>
+        </nav>
+        <div>
+            <div>
+                <h1>This Website is awesome</h1>
+                <p>Lorem ipsum, dolor sit amet consectetquia assumen itatis voluptatum, nisi illum aliquid, sequi eligendi quibusdam distinctio!</p>
+                <button id="button1">sign up</button>
+            </div>
+            <img src="" alt="image">
+        </div>
+    </section>
+
+
+    <section id="sec2">
+        <h1><b>Some random information.</b></h1>
+        <div>
+            <div>
+                <div class="square"></div>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dicta, dolore.</p>
+            </div>
+            <div>
+                <div class="square"></div>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dicta, dolore.</p>
+            </div>
+            <div>
+                <div class="square"></div>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dicta, dolore.</p>
+            </div>
+            <div>
+                <div class="square"></div>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dicta, dolore.</p>
+            </div>
+        </div>
+    </section>
+
+
+    <section id="sec3">
+        <p id="zitat">Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere dolores ducimus, in, modi perspiciatis ratione nemo cum laudantium consectetur veritatis enim ad! Veritatis iusto et molestiae dolores alias rerum tenetur!</p>
+        <p id="name"><b>- Thor, the God of Thunder</b></p>
+    </section>
+
+
+    <section id="sec4">
+        <div>
+            <div>
+                <h1>Call to action! It's time!</h1>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing.Ipsum dolor sit amet consectetur.</p>
+            </div>
+            <button>sign up</button>
+        </div>
+    </section>
+
+
+    <section id="sec5">
+        <p>copywrite and the stuff® in year 2021</p>
+    </section>
+
 </body>
 </html>
